# local-voice-assistant-claude

./: .gitignore  CLAUDE.md  Makefile  README.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  pyproject.toml
backend/model_assets/: .gitkeep
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/api/: __init__.py  config.py  conversations.py  health.py  llm.py  orchestrator.py  stt.py  tts.py  websocket.py
backend/src/db/: database.py
backend/src/lib/: websocket_manager.py
backend/src/models/: __init__.py  config.py  conversation.py  health.py  llm.py  orchestrator.py  stt.py  tts.py  websocket.py
backend/src/services/: conversation_storage_service.py  llm_service.py  orchestrator_service.py  stt_service.py  tts_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: test_conversation_contract.py  test_health.py  test_orchestrator_contract.py  test_stt_status.py  test_stt_stream.py  test_stt_transcribe.py  test_tts_contract.py
backend/tests/integration/: test_conversation_api.py  test_llm_api.py  test_orchestrator_api.py  test_tts_api.py
backend/tests/unit/: test_config_api.py  test_config_api_secrets.py  test_config_loading.py  test_config_model_paths.py  test_config_path_validation.py  test_config_priority.py  test_config_secrets.py  test_config_url_validation.py  test_config_urls.py  test_config_validation.py  test_conversation_storage_service.py  test_llm_service.py  test_orchestrator_service.py  test_stt_service.py  test_tts_service.py
frontend/: README.md  jest.config.mjs  package-lock.json  package.json
frontend/tests/: page.test.tsx
specs/001-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-stt-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-llm-text-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tts-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-voice-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-conversation-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-voice-chat-ui/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
(+78 files in other folders)
